src/test/ui/issues/issue-62554.rs
fn main() {}

fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
//~^ ERROR expected `{`, found `macro_rules`
//~ ERROR this file contains an un-closed delimiter
